[package]
name = "hacker-news-app"
version = "0.1.0"
authors = ["2323-code <nekodoshi23@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.1.1"
chrono = { version = "0.4.38", features = ["serde"] }

dioxus = { version = "0.5", features = ["web", "router"] }

# Debug
dioxus-logger = "0.5.1"
futures = "0.3.30"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
